@@ -1,3 +1,9 @@
+2007-08-13  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_add_networks_helper): don't show non-SSID-broadcasting APs
+			in the menu
+
 2007-08-13  Tambet Ingo  <tambet@gmail.com>
 
 	* src/applet.c (nma_menu_device_add_networks): Fix an invalid free
